k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-5-dev
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
