k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: app-5-dev
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-app-5
  template:
    metadata:
      labels:
        app: dotnet-app-5
    spec:
      containers:
        - name: dotnet-app-5
          image: dokkaushik/dotnet-app-5:d1b08ff79eb1b894800fcba54cf9f08917c44db0
          ports:
            - containerPort: 5000
