k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: app-5-dev
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: angular-app-5
  template:
    metadata:
      labels:
        app: angular-app-5
    spec:
      containers:
        - name: angular-app-5
          image: dokkaushik/angular-app-5:5b6efa0839ac4fa86f47e46fa190c3f9d0cdd89b
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
