k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: app-5-dev
spec:
  selector:
    app: angular-app-5 #angular-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081   # Localhost:30081 -> Frontend
  type: NodePort        # Switch to ClusterIP in prod
