k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: app-5-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx  
  rules:
    - host: api.138.2.131.203.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
